# mini-ppdns

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  ReadMe.md  config.go  config_test.go  docker-compose.yml  forcefall.go  forcefall_test.go  go.mod  go.sum  handler.go  handler_test.go  hook.go  hook_test.go  main.go  main_test.go  mini-ppdns.sh  mini-ppdns_aarch64  mini-ppdns_aarch64_upx  mini-ppdns_armv6l  mini-ppdns_armv6l_upx  mini-ppdns_armv7l  mini-ppdns_armv7l_upx  mini-ppdns_i686  mini-ppdns_i686_upx  mini-ppdns_mips  mini-ppdns_mips64  mini-ppdns_mips64el  mini-ppdns_mips_upx  mini-ppdns_mipsel  mini-ppdns_mipsel_upx  mini-ppdns_riscv64  mini-ppdns_riscv64_upx  mini-ppdns_x86_64  mini-ppdns_x86_64_upx  ptr.go  ptr_test.go  (+6 more)
.github/: release-README.md
.github/workflows/: ci.yml  dep-update.yml  release.yml
mlog/: field.go  logger.go  logger_test.go  term_unix.go  term_windows.go
pkg/cache/: cache.go  cache_test.go
pkg/concurrent_lru/: concurrent_lru.go  concurrent_lru_test.go
pkg/concurrent_map/: map.go  map_test.go
pkg/dnsutils/: msg.go  msg_test.go  net_io.go  net_io_test.go
pkg/list/: list_test.go
pkg/lru/: lru.go  lru_test.go
pkg/pool/: allocator.go  allocator_test.go  bytes_buf_test.go  msg_buf.go  msg_buf_test.go  timer_test.go
pkg/server/: server.go  (+5 more)
pplog/: crypto.go  crypto_test.go  encode.go  pplog.go  pplog_test.go
release/: README.md
src/: app.rs  cache.rs  cli.rs  config.rs  dns.rs  forcefall.rs  handler.rs  hook.rs  local_resolver.rs  log.rs  main.rs  pplog.rs  rng.rs  server.rs  sysinfo.rs  upstream.rs  util.rs
(+19 files in other folders)
